<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="72dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/e_corp_logo" />

            <TextView
                android:id="@+id/motto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo"
                android:layout_centerHorizontal="true"
                android:paddingTop="8dp"
                android:text="@string/motto"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/phone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="6dp"
                android:layout_toLeftOf="@+id/phone_number"
                android:layout_toStartOf="@+id/phone_number"
                android:contentDescription="@string/phone_icon"
                android:onClick="callECorp"
                android:src="@drawable/phone_icon" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="callECorp"
                android:paddingTop="8dp"
                android:text="@string/phone_number"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_icon"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="6dp"
                android:layout_toLeftOf="@id/email_address"
                android:layout_toStartOf="@id/email_address"
                android:contentDescription="@string/email_icon"
                android:onClick="emailECorp"
                android:src="@drawable/email_icon" />

            <TextView
                android:id="@+id/email_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number"
                android:onClick="emailECorp"
                android:paddingTop="16dp"
                android:text="@string/email_address"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/website_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_icon"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="6dp"
                android:layout_toLeftOf="@id/email_address"
                android:layout_toStartOf="@id/email_address"
                android:contentDescription="@string/email_icon"
                android:onClick="visitECorp"
                android:src="@drawable/website_icon" />

            <TextView
                android:id="@+id/website_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_address"
                android:onClick="visitECorp"
                android:paddingTop="16dp"
                android:text="@string/website_url"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/fsociety_logo"
            android:onClick="visitFsociety"
            android:src="@drawable/fsociety_logo" />
    </LinearLayout>
</ScrollView>